--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+				<groupId>com.oracle.oc4j</groupId>
+			<artifactId>oc4j-internal</artifactId>
+			<version>10.1.3.5.0</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
